# Conduence

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CRYPTO_TRADING_STRATEGY.md  README.md  docker-compose.yml  gemini-code-1780575064729.json  package-lock.json  package.json  pyproject.toml  run-setup.md
.cursor/rules/: graphify.mdc
ZEP/: .env.example  README.md  VOICE_TRANSPORT.md  requirements-local.txt  requirements.txt
ZEP/api/: index.py
ZEP/app/: .env.example  README.md  app_state.py  chat_agent.py  cli.py  config.py  graph_snapshot.py  inspect_graph.py  instructions.py  intent.py  llm.py  market_tools.py  ontology.py  package-lock.json  package.json  polymarket.py  requirements.txt  reset_user.py  server.py  setup_instructions.py  setup_ontology.py  voice_agent.py  voice_log.py  zep_client.py
agents/: .env.example  README.md  package.json
agents/arbitrageAgent/: agent.py
backend/: .env.example  package.json  requirements.txt  tsconfig.json
config/: whale-wallets.json
cry/: LATENCY.md  README.md  config.json  main.py
cypher/: ingest.cypher
docs/: redis-insight.md  services.md
frontend/: .env.example  package.json
graphify-out/: .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
kalshiSports/: .env.example  README.md  config.json  cot_wrapper.py  main.py  report.py  requirements.txt
schema/: decision-event.schema.json
supermemory/: .env.example  README.md  index.html  package-lock.json  package.json  test.ts  tsconfig.json  vite.config.ts
wiki/: index.md  log.md  overview.md
(+398 files in other folders)
