[project]
name = "cot-kb"
version = "0.1.0"
description = "LLM knowledge base with decision-graph ingestion to Neo4j"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "neo4j>=5.25.0",
    "redis>=5.2.0",
    "kafka-python>=2.0.2",
    "pydantic>=2.10.0",
    "typer>=0.15.0",
    "rich>=13.9.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
cot = "cot_kb.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cot_kb"]
